# AMPEL360

./: .gitignore  ATA_PARTITION_MATRIX.yaml  ENHANCED_FEATURES.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PORTAL_FEATURES.md  ML_PIPELINE_README.md  README.md  pyproject.toml
.github/workflows/: ca360_portal_gates.yml  cm-gate0-nomenclature.yml  train_eval.yml
CAXS/: 00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__ca360-intent-alignment-policy_DELIVERABLE_STD_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__ca360-main-workflow-ssot_DELIVERABLE_PROC_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__cipp-definition-schema_DELIVERABLE_SCHEMA_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__cipp-knot-graph-model_DELIVERABLE_SPEC_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__cipp-vs-knot-governance_DELIVERABLE_STD_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_DAB__aor-portal-contract-schema_DELIVERABLE_SCHEMA_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_DAB__portal-feature-catalog_REGISTRY_CAT_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_DAB__tool-launchpad-specification_DELIVERABLE_SPEC_I01-R01_ACTIVE.md  DIRECTORY_OVERVIEW.md  README.md  STRUCTURE_VALIDATION.md  release_candidate_protocol.md
CAXS/ATA/: README.md
CAXS/AoR/: README.md
CAXS/INFRASTRUCTURE/: README.md  portal_contract_files_v1.0.md  v6.0_nomenclature_scope.md
CAXS/KNOTS/: README.md
CAXS/LEDGERS/: 00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__cipp-registry_REGISTRY_CAT_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__scope-outcome-registry_REGISTRY_IDX_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_CM__vision-registry_REGISTRY_IDX_I01-R01_ACTIVE.md  00_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_00_LC01_K01_STK_PMO__mission-registry_REGISTRY_IDX_I01-R01_ACTIVE.md  85_AMPEL360_SPACET_Q10_BASELINE_PLUS_PR_80_LC09_K09_STK_CEGT__circularity-kpis_REGISTRY_IDX_I01-R01_ACTIVE.md  README.md  (+1 more)
CAXS/LIFECYCLE/: README.md
CAXS/OPT-INS/: README.md
(+230 files in other folders)
