[project]
name = "ca360-ml"
version = "0.1.0"
description = "Baseline Training Pipeline for CA360 AMPEL360"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AMPEL360 Team"}
]

dependencies = [
    "click>=8.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Enhanced features
dvc = [
    "dvc>=3.0.0",
    "dvc-s3>=3.0.0",
]

mlflow = [
    "mlflow>=2.8.0",
]

onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.15.0",
]

tuning = [
    "optuna>=3.4.0",
    "scikit-optimize>=0.9.0",
]

all = [
    "dvc>=3.0.0",
    "dvc-s3>=3.0.0",
    "mlflow>=2.8.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.15.0",
    "optuna>=3.4.0",
    "scikit-optimize>=0.9.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
]

[project.scripts]
ca360-ml = "ca360_ml.cli:cli"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
